<resources>
    <string name="app_name">Clinic-Admin</string>
    <string name="new_doctor">New Doctor</string>
    <string name="manage_doctor">Manage Doctor</string>
    <string name="manage_slot">Manage Slot</string>
    <string name="contact_info">Manage Contact details</string>
    <string name="manage_report">Manage Report</string>
    <string name="doctor_appointment">Appointments</string>
    <string name="doctor_manage_slot">Manage Slots</string>
    <string name="doctor_edit_profile">Edit Profile</string>
    <string name="doctor_qualification">Add qualification</string>
    <string name="date_picker_title">Date of Report</string>
    <string name="time_picker_title">Select Time</string>
    <string-array name="DoctorNames">
        <item>Dr Umar </item>
        <item>Dr Matee Majboor </item>
        <item>Dr Umar thanda</item>
    </string-array>

    <string-array name="PatientType">
        <item> New </item>
        <item> Regular </item>
    </string-array>

    <string name="search">Search</string>
    <string name="report_id">Report ID</string>

    <string-array name="names">
        <item>Pending</item>
        <item>Confirmed</item>
    </string-array>


    <string name="picture">Picture</string>
    <string name="help_text">
      <b>HDR Viewfinder Demo:</b>\n\n

      Tap viewfinder to switch modes.\n\n

      <b>Normal:</b> Standard camera preview\n
      <b>Split:</b> Manual exposure control\n
      <b>HDR:</b> Fused HDR viewfinder\n\n

      Swipe up/down in Split/HDR modes to change manual exposure
      values.\n\n

      The left half of the viewfinder controls exposure time for
      even-numbered frames, and the right half of the viewfinder
      controls exposure time for odd-numbered frames
    </string>

    <string name="info">Info</string>

    <string name="camera_permission_rationale">This sample app requires camera access in order to
        demo the API.</string>
    <string name="camera_no_good">No back-facing sufficiently capable camera available!</string>
    <string name="camera_disabled">Camera is disabled by device policy</string>
    <string name="camera_disconnected">Camera was disconnected before it was opened</string>
    <string name="camera_error">Camera service reported an error</string>
    <string name="camera_unknown">Unknown camera error: %s</string>
    <string name="camera_permission_denied_explanation">You\'ve denied a permission that the app
        needs for core functionality. If you selected &quot;don\'t ask again&quot; in the past then
        you need to use Settings to re-enable the permission.</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Real-time Face Detection: MLKIT</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>


    <string name="title_activity_maps">Map</string>
</resources>
