<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/doctor_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="normal"
        android:background="@drawable/style_button"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/doctor_appointment"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/doctor_manage_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_manage_slot"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/doctor_appointment"
        android:textStyle="normal"
        android:background="@drawable/style_button"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/doctor_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/doctor_manage_slot"
        android:text="@string/doctor_edit_profile"
        android:textStyle="normal"
        android:background="@drawable/style_button"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>



</RelativeLayout>